--- a/index.html
+++ b/index.html
@@ -119,6 +119,25 @@
         width: 74%;
         margin: 20px auto;
     }
+    /* Responsive styles */
+@media only screen and (min-width: 600px) {
+  /* Styles for screens larger than 600px */
+  body {
+    font-size: 18px;
+  }
+
+  header {
+    padding: 40px;
+  }
+
+  main {
+    padding: 40px;
+  }
+
+  footer {
+    padding: 40px;
+  }
+}
 </style>
 
 <body>
